--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,11 @@
     "@blueprintjs/core": "^5.2.1",
     "@blueprintjs/icons": "^5.1.5",
     "@blueprintjs/select": "^5.0.9",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
