--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@
 build/
 out/
 
+#ignore the generated client files
+src/main/resources/META-INF/resources
+
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
